--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ __pycache__/
 # Para ignorar el archivo de creación de las BDs
 # CrearBDs.py
 # ActualizarBDs.py
+
+# Para ignorar mis anotaciones sobre Djnago y APIs
+VerInfoÚtil.py
