--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ VerInfoÚtil.py
 
 # Para ignorar el archivo de cobertura de tests
 .coverage
+
+# Para ignorar el archivo de configuración de Flake8
+setup.cfg
