Mejorar archivos de Pylint en GitHub actions

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,10 +14,28 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+
+    - name: Instalar dependencias
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-    - name: Analysing the code with pylint
+
+    - name: Analizar la app 'Analysis'
       run: |
-        pylint --max-line-length=250 $(git ls-files '*.py')
+        pylint --max-line-length=250 /Analysis
+
+    - name: Analizar la app 'DashBoard'
+      run: |
+        pylint --max-line-length=250 /DashBoard
+
+    - name: Analizar 'FAT'
+      run: |
+        pylint --max-line-length=250 /FAT     
+    
+    - name: Analizar la app 'News'
+      run: |
+        pylint --max-line-length=250 /News
+    
+    - name: Analizar la app 'Lab'
+      run: |
+        pylint --max-line-length=250 /Lab
