--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Analizar la app 'Analysis'
       run: |
-        pylint --max-line-length=250 Analysis
+        pylint --max-line-length=250 Analysis.views Analysis.models
 
     - name: Analizar la app 'DashBoard'
       run: |
