--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,10 +23,27 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Install dependencies
+    - name: Instalar dependencias
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python -m pip install Django
+        python -m pip install pandas
+        python -m pip install plotly==5.18.0
+        python -m pip install newsapi-python
+        python -m pip install -U matplotlib
+        python -m pip install mpld3
+        python -m pip install django-pandas
+        python -m pip install feedparser
+        python -m pip install yfinance
+        python -m pip install pyclean  
+        python -m pip install coverage
+        python -m pip install python-dotenv
+        python -m pip install networkx
+        python -m pip install statsmodels
+        python -m pip install scikit-learn
+        python -m pip install pmdarima
+        python -m pip install tensorflow
+        python -m pip install pylint
 
     - name: Analizar la app 'Analysis'
       run: |
