--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -52,7 +52,7 @@ jobs:
           python -m pip install pylint
 
       - name: Analyze the 'Analysis' app
-        run: pylint --rcfile=.pylintrc Analysis --output=lint.txt
+        run: pylint --rcfile=.pylintrc Analysis --output=lint.txt || true
 
       - name: Analyze the 'DashBoard' app
         run: pylint --rcfile=.pylintrc DashBoard --output=lint.txt || true
