--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -51,59 +51,25 @@ jobs:
           python -m pip install tensorflow
           python -m pip install pylint
 
-
       - name: Analizar app 'Analysis'
         run: pylint --rcfile=.pylintrc Analysis --output=Analysis_pylint.txt || true
       
-      # - name: Cargar archivo de pylint de 'Analysis'
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Analysis_pylint.txt
-      #     path: pylint
-
       - name: Analizar app 'DashBoard'
         run: pylint --rcfile=.pylintrc DashBoard --output=DashBoard_pylint.txt || true
-      
-      # - name: Cargar archivo de pylint de 'DashBoard'
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: DashBoard_pylint.txt
-      #     path: pylint
-      
 
-      - name: AAnalizar app 'FAT'
+      - name: Analizar app 'FAT'
         run: pylint --rcfile=.pylintrc FAT --output=FAT_pylint.txt || true
-      
-      # - name: Cargar archivo de pylint de 'FAT'
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: FAT_pylint.txt
-      #     path: pylint
 
-
-      - name: AAnalizar app 'News'
+      - name: Analizar app 'News'
         run: pylint --rcfile=.pylintrc News --output=News_pylint.txt || true
-      
-      # - name: Cargar archivo de pylint de 'News'
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: News_pylint.txt
-      #     path: pylint
-
 
       - name: Analizar app 'Lab'
         run: pylint --rcfile=.pylintrc Lab --output=Lab_pylint.txt || true
-      
-      # - name: Cargar archivo de pylint de 'Lab'
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Lab_pylint.txt
-      #     path: pylint
 
       - name: Cargar los logs de pylint
         uses: actions/upload-artifact@v2
         with:
-          name: pylint-logs
+          name: logs_de_pylint
           path: |
             Analysis_pylint.txt
             DashBoard_pylint.txt
