Mejoras en documentación y memoria

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -68,5 +68,5 @@ jobs:
       - name: Subir informe de cobertura de tests
         uses: actions/upload-artifact@v2
         with:
-          name: coverage-report
+          name: informe_de_coverage
           path: htmlcov
