--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,14 +10,13 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-    # You can also specify other tool versions:
-    # nodejs: "19"
-    # rust: "1.64"
-    # golang: "1.19"
 
 # Build documentation in the "docs/" directory with Sphinx
+# sphinx:
+#   configuration: docs/sphinx/conf.py
 sphinx:
-  configuration: docs/sphinx/conf.py
+  source_dir: .
+  builder: html
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
