--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,11 +12,8 @@ build:
     python: "3.12"
 
 # Build documentation in the "docs/" directory with Sphinx
-# sphinx:
-#   configuration: docs/sphinx/conf.py
 sphinx:
-  source_dir: ./
-  builder: html
+  configuration: docs/sphinx/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
@@ -27,5 +24,7 @@ sphinx:
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
-   install:
-   - requirements: docs/sphinx/doc_requirements.txt
+  install:
+  - requirements: docs/sphinx/doc_requirements.txt
+  - method: pip
+    path: .
