--- a/docs/sphinx/requirements.txt
+++ b/docs/sphinx/requirements.txt
@@ -95,7 +95,7 @@ tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
 # tensorflow-intel==2.16.1
-tensorflow-io-gcs-filesystem==0.31.0
+# tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 threadpoolctl==3.4.0
 tomlkit==0.12.4
