--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,72 +1,72 @@
-# name: Coverage
+name: Coverage
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         python-version: ["3.11"]
-#     steps:
-#       - uses: actions/checkout@v3
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"]
+    steps:
+      - uses: actions/checkout@v3
 
-#       - name: Preparar Python ${{ matrix.python-version }}
-#         uses: actions/setup-python@v3
-#         with:
-#           python-version: ${{ matrix.python-version }}
+      - name: Preparar Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
 
-#       - name: Meter dependencias en cache para acelerar proceso de instalción
-#         uses: actions/cache@v2
-#         with:
-#           path: |
-#             ~/.cache/pip
-#             ~/.local/share/virtualenvs
-#           key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/*') }}
-#           restore-keys: |
-#             ${{ runner.os }}-pip-
+      - name: Meter dependencias en cache para acelerar proceso de instalción
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/pip
+            ~/.local/share/virtualenvs
+          key: ${{ runner.os }}-pip-${{ hashFiles('.github/workflows/*') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-#       - name: Instalar dependencias
-#         run: |
-#           python -m pip install --upgrade pip
-#           python -m pip install Django
-#           python -m pip install pandas
-#           python -m pip install plotly==5.18.0
-#           python -m pip install newsapi-python
-#           python -m pip install -U matplotlib
-#           python -m pip install mpld3
-#           python -m pip install django-pandas
-#           python -m pip install feedparser
-#           python -m pip install yfinance
-#           python -m pip install pyclean  
-#           python -m pip install coverage
-#           python -m pip install python-dotenv
-#           python -m pip install networkx
-#           python -m pip install statsmodels
-#           python -m pip install scikit-learn
-#           python -m pip install pmdarima
-#           python -m pip install tensorflow
-#           python -m pip install pylint
+      - name: Instalar dependencias
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install Django
+          python -m pip install pandas
+          python -m pip install plotly==5.18.0
+          python -m pip install newsapi-python
+          python -m pip install -U matplotlib
+          python -m pip install mpld3
+          python -m pip install django-pandas
+          python -m pip install feedparser
+          python -m pip install yfinance
+          python -m pip install pyclean  
+          python -m pip install coverage
+          python -m pip install python-dotenv
+          python -m pip install networkx
+          python -m pip install statsmodels
+          python -m pip install scikit-learn
+          python -m pip install pmdarima
+          python -m pip install tensorflow
+          python -m pip install pylint
 
-#       - name: Testear con coverage
-#         env:
-#           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-#           NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
-#         run: |
-#           export SECRET_KEY
-#           export NEWS_API_KEY
-#           coverage run manage.py test
+      - name: Testear con coverage
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
+        run: |
+          export SECRET_KEY
+          export NEWS_API_KEY
+          coverage run manage.py test
       
-#       - name: Generar informe de cobertura en HTML
-#         run: |
-#           coverage html
-#         continue-on-error: true
+      - name: Generar informe de cobertura en HTML
+        run: |
+          coverage html
+        continue-on-error: true
 
-#       - name: Subir informe de cobertura de tests
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: informe_de_coverage
-#           path: htmlcov
+      - name: Subir informe de cobertura de tests
+        uses: actions/upload-artifact@v2
+        with:
+          name: informe_de_coverage
+          path: htmlcov
