--- a/docs/sphinx/requirements.txt
+++ b/docs/sphinx/requirements.txt
@@ -7,8 +7,11 @@ astunparse==1.6.3
 Babel==2.14.0
 beautifulsoup4==4.12.3
 certifi==2024.2.2
+chardet==5.2.0
 charset-normalizer==3.3.2
 colorama==0.4.6
+colored==2.2.4
+commonmark==0.9.1
 contourpy==1.2.1
 coverage==7.4.4
 cycler==0.12.1
@@ -23,6 +26,8 @@ flatbuffers==24.3.25
 fonttools==4.51.0
 frozendict==2.4.1
 gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.43
 google-pasta==0.2.0
 grpcio==1.62.1
 h5py==3.11.0
@@ -65,17 +70,20 @@ pyclean==3.0.0
 pycodestyle==2.11.1
 pyflakes==3.2.0
 Pygments==2.17.2
+pygount==1.8.0
 pylint==3.1.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+recommonmark==0.7.1
 requests==2.31.0
 rich==13.7.1
 scikit-learn==1.4.2
 scipy==1.13.0
 sgmllib3k==1.0.0
 six==1.16.0
+smmap==5.0.1
 snowballstemmer==2.2.0
 soupsieve==2.5
 Sphinx==7.2.6
